--- a/steamhappy.html
+++ b/steamhappy.html
@@ -1,1 +1,1 @@
-<img src="image.png" onclick="playAudio('mysound.mp3')">
+<img src="02374241-C0F9-4CFE-81C6-739A3D656FD2.jpeg" onclick="playAudio('duck.mp3')">
