--- a/steamhappy.html
+++ b/steamhappy.html
@@ -1,1 +1,15 @@
-<img src="02374241-C0F9-4CFE-81C6-739A3D656FD2.jpeg" onclick="playAudio('https://my.namejeff.com/fvzqjPma.mp3')">
+<html>
+  <head>
+    <title>:steamhappy:</title>
+    <style>
+      .img-container {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="img-container"> <!-- Block parent element -->
+      <img src="https://my.namejeff.com/aWqS2xfD.png" onclick="playAudio('https://my.namejeff.com/fvzqjPma.mp3')">
+    </div>
+  </body>
+</html>
