--- a/steamhappy.html
+++ b/steamhappy.html
@@ -10,10 +10,10 @@
   <body>
     <div class="img-container"> <!-- Block parent element -->
       <a onclick="myAudioFunction('A');">
-     <img src="A.jpg">
+     <img src="https://my.namejeff.com/aWqS2xfD.png">
       </a>
  <script>
-     var aAudio = new Audio('https://my.namejeff.com/aWqS2xfD.png');
+     var aAudio = new Audio('https://my.namejeff.com/fvzqjPma.mp3');
    
      function myAudioFunction(letter) {
          if(letter == 'a') {
