--- a/steamhappy.html
+++ b/steamhappy.html
@@ -18,7 +18,7 @@
          }
      }
  </script>
-      <a onclick="myAudioFunction('A');">
+      <a onclick="myAudioFunction('a');">
      <img src="https://my.namejeff.com/aWqS2xfD.png">
       </a>
     </div>
