--- a/steamhappy.html
+++ b/steamhappy.html
@@ -21,6 +21,23 @@
       <a onclick="myAudioFunction('a');">
      <img src="https://my.namejeff.com/aWqS2xfD.png">
       </a>
+      <video id="myVideo">
+        <source src="https://my.namejeff.com/6Y3E2hbL.MP4" type="video/mp4">
+      </video>
+      <script>
+      var vid = document.getElementById("myVideo"); 
+
+function playVid() { 
+    vid.play(); 
+} 
+
+function pauseVid() { 
+    vid.pause(); 
+}
+      </script>
+      <button onclick="playVid()">CLIK ME 2 PLAY</button>
+      <button onclick="pauseVid()">CLIK ME 2 PASUE</button>
+      
     </div>
   </body>
 </html>
