--- a/steamhappy.html
+++ b/steamhappy.html
@@ -41,6 +41,7 @@ function changespeeders() {
       <button onclick="playVid()">CLIK ME 2 PLAY</button>
       <button onclick="pauseVid()">CLIK ME 2 PASUE</button>
       <input type="text" id="speed" name="speed">
+      <button onclick="changespeeders()">CLIK ME 2 set speedy</button>
     </div>
   </body>
 </html>
