--- a/steamhappy.html
+++ b/steamhappy.html
@@ -22,11 +22,11 @@
      <img src="https://my.namejeff.com/aWqS2xfD.png">
       </a>
       <video id="myVideo">
-        <source src="https://my.namejeff.com/6Y3E2hbL.MP4" type="video/mp4">
+        <source id="saus" src="https://my.namejeff.com/6Y3E2hbL.MP4" type="video/mp4">
       </video>
       <script>
       var vid = document.getElementById("myVideo"); 
-
+      var source = document.getElementById("saus");
 function playVid() { 
     vid.play(); 
 } 
@@ -36,12 +36,17 @@ function pauseVid() {
 } 
 function changespeeders() {
         vid.playbackRate = document.getElementById("speed").value
-}   
+} 
+function changeVid() {
+        source.src = document.getElementById("url").value
+}
       </script>
       <button onclick="playVid()">CLIK ME 2 PLAY</button>
       <button onclick="pauseVid()">CLIK ME 2 PASUE</button>
       <input type="text" id="speed" name="speed">
       <button onclick="changespeeders()">CLIK ME 2 set speedy</button>
+      <input type="text" id="url" name="url">
+      <button onclick="changeVid()">CLIK ME 2 CHANGE VEDIO</button>
     </div>
   </body>
 </html>
