--- a/upload.html
+++ b/upload.html
@@ -39,7 +39,7 @@
         if (file) {
             results.innerHTML = '';
             if (filename == ""){
-            poopenstein = Math.random().toString(36).substring(7);
+            poopenstein = Math.trunc(Math.random());
         } else {
             poopenstein = filename
         }
