--- a/files.html
+++ b/files.html
@@ -1,13 +1,24 @@
-<div id="navigation"></div>
-<div id="listing"></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>S3 Bucket Listing Generator</title>
+</head>
+<body>
+  <div id="navigation"></div>
+  <div id="listing"></div>
 
-<!-- add jQuery - if you already have it just ignore this line -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-<!-- the JS variables for the listing -->
 <script type="text/javascript">
+  var S3BL_IGNORE_PATH = true;
+  var BUCKET_NAME = 's3.queddd.info';
   var BUCKET_URL = 'http://s3.queddd.info.s3-us-east-2.amazonaws.com/';
+  var S3B_ROOT_DIR = '/';
+  var S3B_SORT = 'DEFAULT';
+  var EXCLUDE_FILE = 'index.html';  // change to array to exclude multiple files
+  var AUTO_TITLE = true;
+  var S3_REGION = 's3'; // for us-east-2
 </script>
-
-<!-- the JS to the do the listing -->
 <script type="text/javascript" src="https://rufuspollock.github.io/s3-bucket-listing/list.js"></script>
+
+</body>
+</html>
