--- a/files.html
+++ b/files.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
   var S3BL_IGNORE_PATH = true;
   var BUCKET_NAME = 's3.queddd.info';
-  var BUCKET_URL = 'http://s3.queddd.info.s3-us-east-2.amazonaws.com/';
+  var BUCKET_URL = 'http://s3.queddd.info.s3-us-east-2.amazonaws.com';
   var S3B_SORT = 'DEFAULT';
   var EXCLUDE_FILE = 'index.html';  // change to array to exclude multiple files
   var AUTO_TITLE = true;
