--- a/java_compile.html
+++ b/java_compile.html
@@ -33,13 +33,11 @@
 
     <p><hr>
 
-    <form enctype="multipart/form-data" method="POST" action="/cgi-bin/java_compile">
+    <form enctype="multipart/form-data" method="POST" action="www.innovation.ch/cgi-bin/java_compile">
       <table>
 	<tr>
 	  <td>Source file 1:</td>
-	  <td><input type="file" size="30" name="srcfile"
-	    accept="text/x-java-source,text/java,text/x-java,text/ms-java"
-	    multiple="multiple"></td> 
+	  <td><input type="file" size="30" name="srcfile" multiple="multiple"></td> 
 	</tr>
 	<tr>
 	  <td>Source file 2:</td>
