--- a/java_compile.html
+++ b/java_compile.html
@@ -69,9 +69,7 @@
 	</tr>
 	<tr>
 	  <td>Jar file 1:</td>
-	  <td><input type="file" size="30" name="libfile"
-	    accept="application/java-archive,application/x-jar,application/x-compressed"
-	    multiple="multiple"></td>
+	  <td><input type="file" size="30" name="libfile" multiple="multiple"></td>
 	</tr>
 	<tr>
 	  <td>Jar file 2:</td>
