--- a/bonk/index.html
+++ b/bonk/index.html
@@ -19,7 +19,7 @@
   Drag &amp; drop a .pce file.<br />
   <button id="start">START</button>
   <button id="pause">PAUSE</button><br />
-  <input type="file" id="file"><br />
+  <input type="text" value="bonksadv.pce" id="file" disabled><br />
   PAD0:&nbsp;<span id="pad0state"></span><br />
 </body>
 </html>
