--- a/bonk/index.html
+++ b/bonk/index.html
@@ -12,7 +12,7 @@ var NepMaxWidth = "1100px"; // Maximum width size of emulator. 870px by default
  
 var NepLang = "en";         // Interface language of the emulator. EN by default
  
-var gameUrl = "//neptunjs.xyz/roms/tg16/Street Fighter II' - Champion Edition (Japan).zip"; // Game Url
+var gameUrl = "http://testygroundz.herokuapp.com/bonk/bonksadv.pce"; // Game Url
  
 <script>
  
