--- a/bonk/index.html
+++ b/bonk/index.html
@@ -2,7 +2,7 @@
  
  
  
-var NepPlayer = "#emu";     // ID of html element where the emulator will be inserted
+var NepPlayer = "#canvas0";     // ID of html element where the emulator will be inserted
  
 var NepEmu = "tg16";         // Platform select
  
@@ -17,3 +17,5 @@ var gameUrl = "http://testygroundz.herokuapp.com/bonk/bonksadv.pce"; // Game Url
 <script>
  
 <script src="https://mem.neptunjs.com/njs/njsLoader.js" type="text/javascript"> //NeptunJS
+
+ <canvas id="canvas0" width="320" height="262">Unsupported CANVAS</canvas><br />
