--- a/panther/index.html
+++ b/panther/index.html
@@ -27,19 +27,15 @@ THE SOFTWARE.
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="msapplication-TileImage" content="scratch.png">
 
-<link rel="stylesheet" href="../lib/gh-fork-ribbon.css">
-<link rel="stylesheet" href="../lib/addtohomescreen.css">
-<script src="../lib/addtohomescreen.js"></script>
-
 <link rel="stylesheet" href="scratch.css">
-<script type="module" src="../squeak.js"></script>
-<script src="scratch.js"></script>
+<script type="module" src="https://squeak.js.org/squeak.js"></script>
+<script src="panther.js"></script>
 
 </head>
 <body>
     <div id="sqHeader">
-        <h1>Scratch on SqueakJS</h1>
-        <label title="Make Scratch as large as possible"><input id="sqFullscreen" type="checkbox">full screen</label>
+        <h1>Panther on SqueakJS</h1>
+        <label title="Make Panther as large as possible"><input id="sqFullscreen" type="checkbox">full screen</label>
         <div class="github-fork-ribbon-wrapper right">
             <div class="github-fork-ribbon">
                 <a href="https://github.com/codefrau/SqueakJS" target="_blank">Fork me on GitHub</a>
@@ -47,7 +43,7 @@ THE SOFTWARE.
         </div>
     </div>
     <div id="sqFooter">
-        <p>This is <a href="../" target="_blank">SqueakJS</a> running a Scratch image.
+        <p>This is <a href="../" target="_blank">SqueakJS</a> running a Panther image.
         Feedback and contributions welcome! — Vanessa Freudenberg</p>
     </div>
     <canvas id="sqCanvas"></canvas>
